--- a/.wordpress-config.json
+++ b/.wordpress-config.json
@@ -1,5 +1,5 @@
 {
-  "baseUrl": "reshet.ussl.app/qoinixtech",
+  "baseUrl": "reshet.jetdomains.co.il/qoinixtech",
   "protocol": "https",
   "hostingWPCOM": false,
   "useACF": true,
